--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,12 @@
+ucs-test (4.0.164-38) unstable; urgency=low
+
+  * 60_umc-system/20_umc-service-autostart: test for umc-service
+    autostart behaviour (Bug #34506)
+  * 60_umc-system/TestUMCSystemModule.py: a helper class for testing
+    umc-system
+
+ -- Dmitry Galkin <galkin@univention.de>  Mon, 14 Apr 2014 11:38:52 +0200
+
 ucs-test (4.0.164-37) unstable; urgency=low
 
   * 52_s4connector/02*_concurrent_deletion_in_*: added test cases to
