Bug #34315 PAM: Update copyright
Include 2014.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49333 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-26) unstable; urgency=low
+
+  * Update copyright to 2014.
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 14 Apr 2014 08:57:29 +0200
+
 univention-pam (7.0.4-25) unstable; urgency=medium
 
   * Increase open file limit to 32768 (Bug #32415)
