--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,6 +1,7 @@
 univention-pam (7.0.4-26) unstable; urgency=low
 
   * Update copyright to 2014.
+  * Fix deprecation warning.
 
  -- Philipp Hahn <hahn@univention.de>  Mon, 14 Apr 2014 08:57:29 +0200
 
