Bug #34315 PAM: Add unit test for /etc/pam.d/common-*
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49335 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -2,6 +2,7 @@ univention-pam (7.0.4-26) unstable; urgency=low
 
   * Update copyright to 2014.
   * Fix deprecation warning.
+  * Add unit test for pam/common.
 
  -- Philipp Hahn <hahn@univention.de>  Mon, 14 Apr 2014 08:57:29 +0200
 
