Bug #34315 PAM: Limit password change to remote accounts
Only call auth, account, session, and password service on Kerberos for
non-local accounts (UID >= 1000).

libpam-ldap would support the same through /etc/pam_ldap.conf # pam_min_uid
	auth happens before account, so UID is not known yet.
	account is needed to get the UID.
	session does not need LDAP.
	password has LDAP disabled.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49336 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,5 +1,6 @@
 univention-pam (7.0.4-26) unstable; urgency=low
 
+  * Limit LDAP and Kerberos password change to non-local accounts (Bug #34315)
   * Update copyright to 2014.
   * Fix deprecation warning.
   * Add unit test for pam/common.
