--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-27) unstable; urgency=low
+
+  * Fix $PATH fro ucr (Bug #34315)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 14 Apr 2014 18:16:38 +0200
+
 univention-pam (7.0.4-26) unstable; urgency=low
 
   * Limit LDAP and Kerberos password change to non-local accounts (Bug #34315)
