--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-28) unstable; urgency=medium
+
+  * version bump for backport of patch for Bug 34421 (Bug #34559)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 15 Apr 2014 20:50:50 +0200
+
 univention-directory-manager-modules (9.0.75-27) unstable; urgency=low
 
   * Don't use cn=univention for the temporary move because cn=univention
