* Bump version for Bug #34421 (Bug #34559)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49377 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-29) unstable; urgency=low
+
+  * Bump version for Bug 34421 (Bug #34559)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 15 Apr 2014 21:16:15 +0200
+
 univention-directory-manager-modules (9.0.75-28) unstable; urgency=medium
 
   * version bump for backport of patch for Bug 34421 (Bug #34559)
