* added mail/postfix/ldaptable/debuglevel and     mail/postfix/ldaptable/tlscacertfile (Bug #34198)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49393 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,10 @@
+univention-mail-postfix (8.0.11-3) unstable; urgency=low
+
+  * added mail/postfix/ldaptable/debuglevel and
+    mail/postfix/ldaptable/tlscacertfile (Bug #34198) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 16 Apr 2014 11:45:12 +0200
+
 univention-mail-postfix (8.0.11-2) unstable; urgency=low
 
   * added mail/postfix/ldaptable/tlsrequirecert (Bug #34198) 
