* Undo commit (Bug #33843)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49400 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-30) unstable; urgency=low
+
+  * Undo commit (Bug #33843)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Apr 2014 14:40:33 +0200
+
 univention-directory-manager-modules (9.0.75-29) unstable; urgency=low
 
   * Bump version for Bug 34421 (Bug #34559)
