--- a/services/univention-radius/debian/changelog
+++ b/services/univention-radius/debian/changelog
@@ -1,8 +1,8 @@
-univention-radius (1.0.0-2) unstable; urgency=low
+univention-radius (1.0.0-3) unstable; urgency=medium
 
   * allow configuration via LDAP (Bug #29465)
 
- -- Janek Walkenhorst <walkenhorst@univention.de>  Wed, 16 Apr 2014 14:35:33 +0200
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Wed, 16 Apr 2014 18:21:30 +0200
 
 ucs-school-radius-802.1x (3.0.1-1) unstable; urgency=low
 
