--- a/services/univention-squid-kerberos/debian/changelog
+++ b/services/univention-squid-kerberos/debian/changelog
@@ -1,3 +1,9 @@
+univention-squid-kerberos (3.0.2-7) unstable; urgency=low
+
+  * check if spn exists in secrects.ldb (Bug #33779) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 17 Apr 2014 14:01:31 +0200
+
 univention-squid-kerberos (3.0.2-6) unstable; urgency=low
 
   * modify sp account if already existing (Bug #33779) 
