* Save the entryUUID of deleted objects in OpenLDAP to a local cache.   This will prevent a recreation of deleted objects (Bug #32263)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49465 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-34) unstable; urgency=low
+
+  * Save the entryUUID of deleted objects in OpenLDAP to a local cache.
+    This will prevent a recreation of deleted objects (Bug #32263)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 18 Apr 2014 20:32:43 +0200
+
 univention-s4-connector (8.0.33-33) unstable; urgency=low
 
   * Prevent multiple S4 connector instances (Bug #34410)
