* Skip the password synchronization if no password attribute has been   changed (Bug #33621)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49468 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-37) unstable; urgency=low
+
+  * Skip the password synchronization if no password attribute has been
+    changed (Bug #33621)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Apr 2014 07:39:22 +0200
+
 univention-s4-connector (8.0.33-36) unstable; urgency=low
 
   * The last change didn't check if an attribute was deleted. This has
