--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-39.1) unstable; urgency=low
+
+  * 52_s4connector/030_sync_with_activated_pwqualitycheck: activate
+    pwQualityCheck and check the user creation (Bug #34478)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Apr 2014 08:21:04 +0200
+
 ucs-test (4.0.164-39) unstable; urgency=low
 
   * 60_umc-system/21_umc-service-proc-handling: test to
@@ -18,7 +25,7 @@ ucs-test (4.0.164-37) unstable; urgency=low
 
   * 52_s4connector/02*_concurrent_deletion_in_*: added test cases to
     check if deleted user get synced back as normal users due
-    synchronization (Bug #33621)
+    synchronization (Bug #32263)
 
  -- Stefan Gohmann <gohmann@univention.de>  Fri, 11 Apr 2014 07:40:59 +0200
 
