* Added UCR variable connector/s4/listener/disabled to disable the s4   connector listener module on this host (Bug #33858)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49488 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-38) unstable; urgency=low
+
+  * Added UCR variable connector/s4/listener/disabled to disable the s4
+    connector listener module on this host (Bug #33858)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Apr 2014 15:12:37 +0200
+
 univention-s4-connector (8.0.33-37) unstable; urgency=low
 
   * Skip the password synchronization if no password attribute has been
