--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-39) unstable; urgency=low
+
+  * Use listener.baseConfig instead of listener.ucr (Bug #33858)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Apr 2014 15:24:48 +0200
+
 univention-s4-connector (8.0.33-38) unstable; urgency=low
 
   * Added UCR variable connector/s4/listener/disabled to disable the s4
