* Sync the password if the user was created in UCS (Bug #33621)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49542 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-40) unstable; urgency=low
+
+  * Sync the password if the user was created in UCS (Bug #33621)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 23 Apr 2014 15:02:51 +0200
+
 univention-s4-connector (8.0.33-39) unstable; urgency=low
 
   * Use listener.baseConfig instead of listener.ucr (Bug #33858)
