--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,12 @@
+ucs-test (4.0.164-41) unstable; urgency=low
+
+  * 60_umc-system/22_umc-service-proc-killing: test UMC
+    process killing (Bug #34593)
+  * 60_umc-system/TestUMCSystemModule.py: added method
+    to make top/query request
+
+ -- Dmitry Galkin <galkin@univention.de>  Wed, 23 Apr 2014 17:07:18 +0200
+
 ucs-test (4.0.164-40) unstable; urgency=low
 
   * Bug #34288: check UMCP request /umcp/get/ipaddress
