--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (8.0.0-7) unstable; urgency=low
+
+  * Update copyright (Bug #34355)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 03 Apr 2014 16:26:42 +0200
+
 univention-directory-listener (8.0.0-6) unstable; urgency=medium
 
   * Adjust listener resync shutdown message (Bug #32605)
