Bug #34355 Listener: Track move after modify by UUID
Lookup entryUUID from local cache to perform fetch from remote LDAP.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49563 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -2,6 +2,7 @@ univention-directory-listener (8.0.0-7) unstable; urgency=low
 
   * Update copyright (Bug #34355)
   * Drop NotifierId from cache_get() (Bug #34355)
+  * Use entryUUID to handle move after modify (Bug #34355)
 
  -- Philipp Hahn <hahn@univention.de>  Thu, 03 Apr 2014 16:26:42 +0200
 
