--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-42) unstable; urgency=low
+
+  * Bug #34343: use app methods to check whether requirements for
+    installation are met
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 25 Apr 2014 16:43:25 +0200
+
 ucs-test (4.0.164-41) unstable; urgency=low
 
   * 60_umc-system/22_umc-service-proc-killing: test UMC
