univention-lib (3.0.26-19) unstable; urgency=medium
  * change UCR calls to use absolute path (Bug #29241)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49641 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-19) unstable; urgency=medium
+
+  * change UCR calls to use absolute path (Bug #29241)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 25 Apr 2014 17:43:59 +0200
+
 univention-lib (3.0.26-18) unstable; urgency=low
 
   * Use shuitl.move instead of os.rename in ldap_extension.py
