--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,11 @@
+univention-directory-manager-modules (9.0.75-31) unstable; urgency=low
+
+  * fixed tracebacks which could occur when adding/removing forward,
+    reverse or dhcp zones without ip address
+  (Bug #33843)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 30 Apr 2014 11:46:25 +0200
+
 univention-directory-manager-modules (9.0.75-30) unstable; urgency=low
 
   * Undo commit (Bug #33843)
