Bug #34742 PAM: trigger well-known-sid-name-mapping
The new listener un-earthed the following bugs in the
well-known-sid-name-mapping listener modules:
1. "uid" is missing in the list of triggering attributes.
2. even a single-values attribute can be multi-valued due to the use of
modrdn.

Name the output values in the debug output.

Change case to "sambaSID" as the listener used a case-sensitive
comparison in attribute_has_changed():
	$ univention-ldapsearch -LLL -o ldif-wrap=no -b cn=Subschema -s base -E '!mv=(attributeTypes=1.3.6.1.4.1.7165.2.1.20)' attributeTypes
	attributeTypes: ( 1.3.6.1.4.1.7165.2.1.20 NAME 'sambaSID' DESC 'Security ID' EQUALITY caseIgnoreIA5Match SUBSTR caseExactIA5SubstringsMatch SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{64} SINGLE-VALUE )

Remove unused "import re".

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49757 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-28) unstable; urgency=low
+
+  * Trigger well-known-sid-name-mapping on UID changes(Bug #34742)
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 02 May 2014 16:55:15 +0200
+
 univention-pam (7.0.4-27) unstable; urgency=low
 
   * Fix $PATH fro ucr (Bug #34315)
