Bug #34355 Listener: fix memory leak
In case of a broken LDAP connection connect_to_ldap() get called
multiple times, each time allocating a cache entry anew.

Release resources early on errors.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49758 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (8.0.0-8) unstable; urgency=low
+
+  * Fix memory leak (Bug #34355)
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 02 May 2014 23:18:26 +0200
+
 univention-directory-listener (8.0.0-7) unstable; urgency=low
 
   * Update copyright (Bug #34355)
