* It is not sufficient to run base64.decodestring to detect a base64   string. Update _is_base64() (Bug #33621)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49763 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-41) unstable; urgency=low
+
+  * It is not sufficient to run base64.decodestring to detect a base64
+    string. Update _is_base64() (Bug #33621)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 05 May 2014 08:31:53 +0200
+
 univention-s4-connector (8.0.33-40) unstable; urgency=low
 
   * Sync the password if the user was created in UCS (Bug #33621)
