Bug #26137: added utils-local.sh
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49820 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.19-1) unstable; urgency=low
+
+  * Bug #26137: added utils-local.sh
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 06 May 2014 09:52:18 +0200
+
 ucs-ec2-tools (0.1.18-1) unstable; urgency=medium
 
   * Raise samba/debug/level also on s4 master for Bug #33904
