* Revert changes for Bug #33621 and Bug #32263. These bugs have been   moved to UCS 3.2-2-errata
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49860 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-44) unstable; urgency=low
+
+  * Revert changes for Bug #33621 and Bug #32263. These bugs have been
+    moved to UCS 3.2-2-errata
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 06 May 2014 14:48:01 +0200
+
 univention-s4-connector (8.0.33-43) unstable; urgency=low
 
   * group_members_sync_to_ucs: use the correct key for the object
