--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-45) unstable; urgency=low
+
+  * Remove single_value from mapping file (Bug #33621)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 06 May 2014 15:09:04 +0200
+
 univention-s4-connector (8.0.33-44) unstable; urgency=low
 
   * Revert changes for Bug #33621 and Bug #32263. These bugs have been
