--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (7.0.0-10) unstable; urgency=low
+
+  * Update to the latest kernel build (Bug #34002).
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Tue, 06 May 2014 15:03:57 +0200
+
 univention-kernel-image (7.0.0-9) unstable; urgency=low
 
   * Update to the latest kernel build (Bug #32571).
