Copy UCS 3.2-1 to UCS 3.2-2 (Bug #33809)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@49881 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,15 @@
+univention-directory-listener (8.0.0-10) unstable; urgency=low
+
+  * Fix handling of binary attributes (Bug #34355)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 06 May 2014 09:23:21 +0200
+
+univention-directory-listener (8.0.0-9) unstable; urgency=low
+
+  * Remove old values on RDN change (Bug #34355)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 05 May 2014 15:00:57 +0200
+
 univention-directory-listener (8.0.0-8) unstable; urgency=low
 
   * Fix memory leak (Bug #34355)
