--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-29) unstable; urgency=low
+
+  * Fix PAM stack for password change (Bug #34315)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 06 May 2014 19:06:33 +0200
+
 univention-pam (7.0.4-28) unstable; urgency=low
 
   * Trigger well-known-sid-name-mapping on UID changes(Bug #34742)
@@ -6,7 +12,7 @@ univention-pam (7.0.4-28) unstable; urgency=low
 
 univention-pam (7.0.4-27) unstable; urgency=low
 
-  * Fix $PATH fro ucr (Bug #34315)
+  * Fix $PATH for ucr (Bug #34315)
 
  -- Philipp Hahn <hahn@univention.de>  Mon, 14 Apr 2014 18:16:38 +0200
 
