* Don't close the lock_file fd (Bug #34410)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49900 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-46) unstable; urgency=low
+
+  * Don't close the lock_file fd (Bug #34410)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 06 May 2014 20:01:16 +0200
+
 univention-s4-connector (8.0.33-45) unstable; urgency=low
 
   * Remove single_value from mapping file (Bug #33621)
