* 002_multiple_s4_connector_instances: Try to start multiple s4-   connector instances (Bug #34410)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49901 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-45) unstable; urgency=low
+
+  * 002_multiple_s4_connector_instances: Try to start multiple s4-
+    connector instances (Bug #34410)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 06 May 2014 20:19:22 +0200
+
 ucs-test (4.0.164-44) unstable; urgency=low
 
   * 60_umc-system/30_umc-service-user-modules: test UMC
