minor addition to last change (Bug #33843)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49956 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.75-32) unstable; urgency=low
+
+  * minor addition to last change
+  (Bug #33843)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 07 May 2014 15:54:31 +0200
+
 univention-directory-manager-modules (9.0.75-31) unstable; urgency=low
 
   * fixed tracebacks which could occur when adding/removing forward,
