--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-25) unstable; urgency=medium
+
+  * activate gentlehup in slapd.conf (Bug #34440)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 07 May 2014 17:21:32 +0200
+
 univention-ldap (10.0.17-24) unstable; urgency=low
 
   * Sort schema files by name (Bug #34406)
