* Fix bashism (Bug #34440)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@49968 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-27) unstable; urgency=medium
+
+  * Fix bashism (Bug #34440)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 07 May 2014 19:41:48 +0200
+
 univention-ldap (10.0.17-26) unstable; urgency=medium
 
   * Adjust slapd init file (Bug #34440)
