* Adjust slapd init file (Bug #34440): * Don't use killall to avoid killing the init script itself * Don't pgrep by name to avoid detecting the init script itself * Fix db4.8_recover removing the bdb environment files (see man for "-e")
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@49979 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,12 @@
+univention-ldap (10.0.17-28) unstable; urgency=medium
+
+  * Adjust slapd init file (Bug #34440):
+  * Don't use killall to avoid killing the init script itself
+  * Don't pgrep by name to avoid detecting the init script itself
+  * Fix db4.8_recover removing the bdb environment files (see man for "-e")
+
+ -- Arvid Requate <requate@univention.de>  Thu, 08 May 2014 10:11:53 +0200
+
 univention-ldap (10.0.17-27) unstable; urgency=medium
 
   * Fix bashism (Bug #34440)
