--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-29) unstable; urgency=medium
+
+  * Improve pgrep pattern (Bug #34440)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 08 May 2014 10:31:47 +0200
+
 univention-ldap (10.0.17-28) unstable; urgency=medium
 
   * Adjust slapd init file (Bug #34440):
