* Remove gentlehup option from slapd.conf again (Bug #34440)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50011 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-30) unstable; urgency=medium
+
+  * Remove gentlehup option from slapd.conf again (Bug #34440)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 08 May 2014 14:35:51 +0200
+
 univention-ldap (10.0.17-29) unstable; urgency=medium
 
   * Improve pgrep pattern (Bug #34440)
