--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,11 @@
+univention-ldap (10.0.17-31) unstable; urgency=medium
+
+  * Make ldap_extension listener log slapd restarts at WARN level (Bug #34440)
+  * If bdb check calls fail then check if another /etc/init.d/slapd is running
+  * Don't hide output of check_subschema 
+
+ -- Arvid Requate <requate@univention.de>  Thu, 08 May 2014 16:41:30 +0200
+
 univention-ldap (10.0.17-30) unstable; urgency=medium
 
   * Remove gentlehup option from slapd.conf again (Bug #34440)
