* Make ldap_extension listener log slapd restarts at PROCESS level   (Bug #34440)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50028 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,10 @@
+univention-ldap (10.0.17-32) unstable; urgency=medium
+
+  * Make ldap_extension listener log slapd restarts at PROCESS level
+    (Bug #34440)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 08 May 2014 16:47:05 +0200
+
 univention-ldap (10.0.17-31) unstable; urgency=medium
 
   * Make ldap_extension listener log slapd restarts at WARN level (Bug #34440)
