--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,12 @@
+univention-ldap (10.0.17-33) unstable; urgency=medium
+
+  * Adjust slapd init file (Bug #34440):
+  * Log db recover output to /var/log/messages
+  * Log action timestamp and parent process to /var/log/messages
+  * Improve readability of log output
+
+ -- Arvid Requate <requate@univention.de>  Thu, 08 May 2014 19:11:24 +0200
+
 univention-ldap (10.0.17-32) unstable; urgency=medium
 
   * Make ldap_extension listener log slapd restarts at PROCESS level
