* Try to re-create the cli-server socket if the first creation failed   (Bug #34784)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50045 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.76-1) unstable; urgency=low
+
+  * Try to re-create the cli-server socket if the first creation failed
+    (Bug #34784)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 08 May 2014 22:07:22 +0200
+
 univention-directory-manager-modules (9.0.75-32) unstable; urgency=low
 
   * minor addition to last change
