--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test (4.0.164-47) unstable; urgency=low
+
+  * Bug #34624:
+    60_umc-system/40_umc-service-domain-join: test domain join module
+    60_umc-system/99univention-test-join-script.inst: a test join script
+
+ -- Dmitry Galkin <galkin@univention.de>  Fri, 09 May 2014 11:55:36 +0200
+
 ucs-test (4.0.164-46) unstable; urgency=low
 
   * verify_ldap_object(): limit search to scope base, otherwise it is
