Bug #34800 lib: Fix slapd restart on LDAP schema activation
The trivial check for univentionLDAPSchemaActive did not trigger, as
LDAP attributes are always returned as a list.

Put 'TRUE' into [...].

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50102 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-20) unstable; urgency=low
+
+  * Fix slapd restart on LDAP schema activation (Bug #34800)
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 09 May 2014 17:36:45 +0200
+
 univention-lib (3.0.26-19) unstable; urgency=medium
 
   * change UCR calls to use absolute path (Bug #29241)
