* Disabled 96rename_domain_* tests (Bug #34802)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50112 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.165-1) unstable; urgency=low
+
+  * Disabled 96rename_domain_* tests (Bug #34802)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sat, 10 May 2014 14:53:53 +0200
+
 ucs-test (4.0.164-47) unstable; urgency=low
 
   * Bug #34624:
