--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,13 @@
+ucs-test (4.0.166-2) unstable; urgency=low
+
+  * Moved some generic functions from 52/dnstests.py to 52/s4connector.py
+  	since they are not dns specific (Bug #31324)
+  * Adapted 52/175* and 50/176* tests accordingly
+  * Added check if ucr connector/s4/autostart is set to yes to all 52/175* and
+  	52/165* tests (Bug #29211)
+
+ -- Drees Dormann <dormann@univention.de>  Mon, 12 May 2014 13:34:34 +0200
+
 ucs-test (4.0.166-1) unstable; urgency=low
 
   * 00_base/9*rename_*: wait a little bit longer since the slapd has to
