--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-3) unstable; urgency=low
+
+  * Ignore .inst and .uinst files (Bug #34818)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 13 May 2014 10:30:33 +0200
+
 ucs-test (4.0.166-2) unstable; urgency=low
 
   * Moved some generic functions from 52/dnstests.py to 52/s4connector.py
