* Bug #32935: Add timeout to urlopen
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50198 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.51-12) unstable; urgency=low
+
+  * Bug #32935: Add timeout to urlopen
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 13 May 2014 14:04:13 +0200
+
 univention-management-console-module-appcenter (3.0.51-11) unstable; urgency=low
 
   * Bug #32935: Add timeout to connection
