--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (6.0.1-5) unstable; urgency=low
+
+  * Update to latest kernel (Bug #31815)
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Wed, 14 May 2014 06:10:03 +0200
+
 univention-kernel-image (6.0.1-3) unstable; urgency=low
 
   * Update to 3.2.46 (Bug #30887)
