--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,12 @@
+ucs-test (4.0.166-5) unstable; urgency=low
+
+  * Restructured 52/176* tests
+  * Changed checking of user surname for consistency to checking of sid
+  * minor corrections
+  	(Bug #31324)
+
+ -- Drees Dormann <dormann@univention.de>  Wed, 14 May 2014 10:45:41 +0200
+
 ucs-test (4.0.166-4) unstable; urgency=low
 
   * Changed test 00/07kpasswd_output so output of test is easier to understand
