--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.40-1) unstable; urgency=low
+
+  * Adjust pre- and postup.sh for UCS 3.2-2 (Bug #33809)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 14 May 2014 12:33:42 +0200
+
 univention-updater (9.0.39-1) unstable; urgency=low
 
   * Adjust pre- and postup.sh for UCS 3.2-2 (Bug #33809)
