* Don't delete the temporary ou (Bug #34833)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@50254 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-33) unstable; urgency=medium
+
+  * Don't delete the temporary ou (Bug #34833)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 14 May 2014 15:06:48 +0200
+
 univention-directory-manager-modules (9.0.75-32) unstable; urgency=low
 
   * minor addition to last change
