--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.51-13) unstable; urgency=low
+
+  * Undo changes from Bug #32935 since this does not work with proxies
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 14 May 2014 15:48:30 +0200
+
 univention-management-console-module-appcenter (3.0.51-12) unstable; urgency=low
 
   * Bug #32935: Add timeout to urlopen
