--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.51-14) unstable; urgency=low
+
+  * Added a timeout to univention-register-apps (Bug #34834)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 14 May 2014 15:52:45 +0200
+
 univention-management-console-module-appcenter (3.0.51-13) unstable; urgency=low
 
   * Undo changes from Bug #32935 since this does not work with proxies
