--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-listener (8.0.0-11) unstable; urgency=low
+
+  * Ignore case while comparing DNs. Otherwise a modification is
+    recognized as move (Bug #34835)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 14 May 2014 20:29:27 +0200
+
 univention-directory-listener (8.0.0-10) unstable; urgency=low
 
   * Fix handling of binary attributes (Bug #34355)
