Bug #34813 LDAP: Add entryUUID to LDAP index
The Univention Directory Listener does a LDAP search "(entryUUID=...)"
since Bug #34355.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@50305 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-25~1) unstable; urgency=low
+
+  * Add entryUUID to LDAP index (Bug #34813)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 15 May 2014 14:36:43 +0200
+
 univention-ldap (10.0.17-24) unstable; urgency=low
 
   * Sort schema files by name (Bug #34406)
