--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-34) unstable; urgency=low
+
+  * Add entryUUID to LDAP index (Bug #34815)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 15 May 2014 14:36:43 +0200
+
 univention-ldap (10.0.17-33) unstable; urgency=medium
 
   * Adjust slapd init file (Bug #34440):
