* Re-added diff mode changes (Bug #33621 and Bug #32263)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50307 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-47) unstable; urgency=low
+
+  * Re-added diff mode changes (Bug #33621 and Bug #32263)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 15 May 2014 14:36:39 +0200
+
 univention-s4-connector (8.0.33-46) unstable; urgency=low
 
   * Don't close the lock_file fd (Bug #34410)
